--- a/assignment3/robbinlaw/pubspec.yaml
+++ b/assignment3/robbinlaw/pubspec.yaml
@@ -1,4 +1,4 @@
-name: assignment3
+name: robbinlaw
 description: A new Flutter project.
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
@@ -31,6 +31,9 @@ dependencies:
   flutter:
     sdk: flutter
 
+  http:
+  sqflite:
+  path:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
